Changes to enable build with JDK10
- ambiguous `.from()` in `IntegrationFlows`
- new Integer|Long(n) deprecated
- `Class.newInstance()` deprecated
- --add-modules where needed
- illegal reflection